<resources>
	<string name="app_name">PLFGD</string>
	<string name="replay">Rejouer</string>
	<string name="connect">Se connecter</string>
	<string name="connecting">Connexion en cours</string>
	<string name="welcome">Bienvenue, \%s !</string>
	<string name="connexionLost">Connexion au serveur perdu</string>
	<string name="nonemptyInputs">Les champs ne doivent pas être vides</string>
	<string name="host_unreachable">Imposible de joindre le serveur</string>
	<string name="draw_Title">Dessin</string>
	<string name="valid">Valider</string>
	<string name="reset">Reset</string>
	<string name="draw">Dessine</string>
	<string name="wait">Merci de patienter</string>
	<string name="back">Retour</string>
	<string name="good_job">Bravo !</string>
	<string name="retry">Essaie encore!</string>
	<string name="square">un carré</string>
	<string name="round">un rond</string>
	<string name="triangle">un triangle</string>
	<string name="segment">un segment</string>
	<string name="point">un point</string>
	<string name="server_address_port">10.0.2.2:10101</string>
	<string name="username">Nom d\'utilisateur</string>
	<string name="training">Entrainement</string>
	<string name="win">Vous avez gagnez !</string>
	<string name="lose">Vous avez perdu…</string>
	<string name="vs">VS</string>
	<string name="sct">Rectangle Rond Triangle</string>
	<string name="drawforme">Dessiner une forme</string>
	<string name="title_activity_preferences">Préférences</string>
	<string name="preferences">Préférences</string>
	<string name="server_url">Adresse du serveur</string>
	<string name="username_label">Nom d\'utilisateur</string>
	<string name="is">Tu as dessiné un</string>
	<string name="isnt">Ceci n\'est pas un</string>
	<string name="pseudo">Pseudo</string>
	<string name="username_order">Saisis ton pseudo</string>
	<string name="you_win">Vous avez gagné</string>
	<string name="you_loose">Vous avez perdu</string>
	<string name="equality">Égalité</string>
	<string name="deviner_la_forme">Deviner la forme</string>
	<string name="menu">Menu</string>
	<string name="result">Résultat</string>
	<string name="score">%d Gold</string>
</resources>
