...
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:layout_marginBottom="20dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintBottom_toTopOf="@id/connect_button"
		/>

		<Button
				android:id="@+id/connect_button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
...
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/connect_button"
		/>

		<Button
				android:id="@+id/settings_btn"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:layout_marginBottom="15dp"
...
