<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
>

	<TextView
			android:textSize="28sp"
			android:id="@+id/draw_order"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textColor="@color/green"
			android:layout_marginTop="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="15dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintBottom_toTopOf="@id/draw_canvas"
			app:layout_constraintRight_toLeftOf="@id/draw_reset"

	/>

	<Button
			android:id="@+id/draw_reset"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:padding="20dp"
			android:text="@string/reset"
			app:layout_constraintLeft_toRightOf="@id/draw_order"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@id/draw_canvas"
	/>

	<unice.plfgd.draw.DrawCanvas
			android:id="@+id/draw_canvas"
			android:background="@color/white"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:layout_marginBottom="15dp"
			app:layout_constraintTop_toBottomOf="@id/draw_reset"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintBottom_toTopOf="@id/draw_valid"
	/>

	<Button
			android:id="@+id/draw_valid"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:layout_marginBottom="15dp"
			android:padding="30dp"
			android:text="@string/valid"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
	/>

</android.support.constraint.ConstraintLayout>
