...
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:padding="20dp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/result_text"
			app:layout_constraintBottom_toTopOf="@id/result_back"
	/>

	<Button
			android:id="@+id/result_back"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
...
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:layout_marginBottom="15dp"
			android:padding="30dp"
			android:text="@string/back"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/result_replay"
			app:layout_constraintBottom_toBottomOf="parent"
	/>

	<Button
			android:id="@+id/result_replay"
			android:layout_width="0dp"
...
