...
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:layout_marginBottom="15dp"
				app:layout_constraintTop_toBottomOf="@id/ctr_vs"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintBottom_toTopOf="@id/ctr_retour"
		/>

		<Button
				android:id="@+id/ctr_retour"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
...
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:layout_marginBottom="15dp"
				android:padding="30dp"
				android:text="@string/back"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/ctr_rejouer"
				app:layout_constraintBottom_toBottomOf="parent"
		/>

		<Button
				android:id="@+id/ctr_rejouer"
				android:layout_width="0dp"
...
